--- a/Untitled47.ipynb
+++ b/Untitled47.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmsoLDMjlLI8cZDLIXEQ61",
+      "authorship_tag": "ABX9TyNUkwkwz7KPuqD/WnLhmYka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       },
       "source": [
         "# Task\n",
-        "Scrape app reviews from Google Play Store using Python."
+        "Scrape app reviews from Google Play Store using Python.hh"
       ]
     },
     {
