done it even its not done yet

--- a/week_2_task.ipynb
+++ b/week_2_task.ipynb
@@ -39,23 +39,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "55653a1b"
+        "id": "b21ef03f"
       },
       "source": [
-        "**Sumber Kode**: https://www.kaggle.com/code/soumyadeepp/face-emotion-recognition/notebook\n",
+        "# **0. Project Overview (Gambaran Proyek)**\n",
         "\n",
-        "**Link Dataset**: https://www.kaggle.com/datasets/jonathanoheix/face-expression-recognition-dataset"
+        "**Source Code**: https://www.kaggle.com/code/soumyadeepp/face-emotion-recognition/notebook\n",
+        "\n",
+        "**Dataset Link**: https://www.kaggle.com/datasets/jonathanoheix/face-expression-recognition-dataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "94c77038"
+        "id": "fc5c49fa"
       },
       "source": [
-        "# **1. Pernyataan Masalah (Problem Statement)**\n",
+        "## **1. Problem Statement (Pernyataan Masalah)**\n",
         "\n",
-        "**Pengantar Proyek:**\n",
+        "**Project Introduction:**\n",
         "\n",
         "Dalam dekade terakhir, lanskap pendidikan di India telah mengalami transformasi signifikan, didorong oleh kemajuan dalam layanan pembelajaran berbasis web, terutama platform eLearning.\n",
         "\n",
@@ -67,9 +69,18 @@
         "\n",
         "Kami akan mengatasi tantangan ini dengan menerapkan algoritma deep learning pada data video langsung. Solusi yang diusulkan adalah melalui pengenalan emosi wajah.\n",
         "\n",
-        "## Pengenalan Emosi Wajah\n",
+        "## Facial Emotion Recognition (Pengenalan Emosi Wajah)\n",
         "\n",
         "Proyek ini bertujuan untuk membangun sistem deteksi emosi wajah langsung dengan pelatihan minimal. Model yang dikembangkan harus mampu mengidentifikasi emosi siswa secara real-time selama sesi kelas langsung."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "585712b4"
+      },
+      "source": [
+        "## **2. Import Libraries (Impor Library)**"
       ]
     },
     {
@@ -88,7 +99,6 @@
         "from tensorflow.keras.models import Model,Sequential\n",
         "from tensorflow.keras.optimizers import Adam,SGD,RMSprop\n",
         "import tensorflow as tf\n",
-        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
         "\n",
         "# Library untuk visualisasi model\n",
         "from tensorflow.keras.utils import plot_model\n",
@@ -96,16 +106,9 @@
         "# Library untuk callback saat pelatihan model\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
         "\n",
-        "# Penjelasan Kode:\n",
-        "# Bagian ini mengimpor semua library Python yang dibutuhkan untuk proyek ini.\n",
-        "# - matplotlib, numpy, pandas, seaborn, os: Digunakan untuk manipulasi data, visualisasi, dan interaksi dengan sistem operasi.\n",
-        "# - tensorflow.keras: Library utama untuk membangun dan melatih model deep learning.\n",
-        "# - load_img, img_to_array, ImageDataGenerator: Untuk memuat, memproses, dan augmentasi data gambar.\n",
-        "# - Layer-layer seperti Dense, Conv2D, MaxPooling2D, dll.: Blok bangunan untuk arsitektur model Convolutional Neural Network (CNN).\n",
-        "# - Model, Sequential: Untuk mendefinisikan struktur model.\n",
-        "# - Optimizers seperti Adam, SGD, RMSprop: Algoritma untuk mengoptimalkan bobot model selama pelatihan.\n",
-        "# - Callbacks seperti ModelCheckpoint, EarlyStopping, ReduceLROnPlateau: Fungsi yang dijalankan selama pelatihan untuk memantau dan mengontrol proses.\n",
-        "# - plot_model: Untuk memvisualisasikan arsitektur model."
+        "# Kode utk mengambil dataset\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "execution": {
@@ -122,31 +125,20 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "# Penjelasan Kode:\n",
-        "# Kode ini digunakan untuk menghubungkan Google Colab dengan Google Drive Anda.\n",
-        "# Ini memungkinkan notebook untuk mengakses file dataset yang disimpan di Google Drive."
-      ],
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eIMxbeqZC5Eh",
-        "outputId": "695d0d4c-1ea6-4860-d159-3fb9e804907a"
+        "id": "5779b7fe"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
+      "source": [
+        "Bagian ini mengimpor semua library Python yang dibutuhkan untuk proyek ini.\n",
+        "- `matplotlib`, `numpy`, `pandas`, `seaborn`, `os`: Digunakan untuk manipulasi data, visualisasi, dan interaksi dengan sistem operasi.\n",
+        "- `tensorflow.keras`: Library utama untuk membangun dan melatih model deep learning.\n",
+        "- `load_img`, `img_to_array`, `ImageDataGenerator`: Untuk memuat, memproses, dan augmentasi data gambar.\n",
+        "- Layer-layer seperti `Dense`, `Conv2D`, `MaxPooling2D`, dll.: Blok bangunan untuk arsitektur model Convolutional Neural Network (CNN).\n",
+        "- `Model`, `Sequential`: Untuk mendefinisikan struktur model.\n",
+        "- Optimizers seperti `Adam`, `SGD`, `RMSprop`: Algoritma untuk mengoptimalkan bobot model selama pelatihan.\n",
+        "- Callbacks seperti `ModelCheckpoint`, `EarlyStopping`, `ReduceLROnPlateau`: Fungsi yang dijalankan selama pelatihan untuk memantau dan mengontrol proses.\n",
+        "- `plot_model`: Untuk memvisualisasikan arsitektur model."
       ]
     },
     {
@@ -1124,44 +1116,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "b21ef03f"
-      },
-      "source": [
-        "# 0. Project Overview (Gambaran Proyek)\n",
-        "\n",
-        "**Source Code**: https://www.kaggle.com/code/soumyadeepp/face-emotion-recognition/notebook\n",
-        "\n",
-        "**Dataset Link**: https://www.kaggle.com/datasets/jonathanoheix/face-expression-recognition-dataset"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fc5c49fa"
-      },
-      "source": [
-        "# 1. Problem Statement (Pernyataan Masalah)\n",
-        "\n",
-        "**Project Introduction:**\n",
-        "\n",
-        "Dalam dekade terakhir, lanskap pendidikan di India telah mengalami transformasi signifikan, didorong oleh kemajuan dalam layanan pembelajaran berbasis web, terutama platform eLearning.\n",
-        "\n",
-        "Diperkirakan pasar eLearning global akan tumbuh delapan kali lipat dalam lima tahun ke depan, mencapai USD 2 miliar pada tahun 2021. India sendiri diproyeksikan tumbuh dengan CAGR sebesar 44%, melampaui 10 juta pengguna pada tahun 2021. Meskipun pasar berkembang pesat, ada tantangan besar dalam pembelajaran digital dibandingkan dengan ruang kelas tradisional. Salah satu tantangan utama adalah memastikan kualitas pembelajaran bagi siswa. Platform digital mungkin unggul dalam kualitas konten, tetapi memahami apakah siswa benar-benar memahami materi dalam skenario kelas langsung masih menjadi masalah yang belum terpecahkan.\n",
-        "\n",
-        "Di ruang kelas fisik, seorang guru dapat mengamati ekspresi wajah siswa untuk menilai emosi mereka dan menyesuaikan kecepatan atau gaya mengajar mereka. Guru dapat mengidentifikasi siswa yang membutuhkan perhatian lebih. Namun, kelas digital yang dilakukan melalui platform videotelefoni (seperti Zoom) menyulitkan guru untuk memantau semua siswa dalam kelas berukuran sedang (25-50 siswa) dan menilai suasana hati mereka. Kekurangan ini dapat menyebabkan siswa kurang fokus pada konten karena kurangnya pengawasan.\n",
-        "\n",
-        "Meskipun platform digital memiliki keterbatasan dalam pengawasan fisik, mereka menawarkan kekuatan data dan mesin yang dapat dimanfaatkan. Platform ini menghasilkan data dalam bentuk video, audio, dan teks yang dapat dianalisis menggunakan algoritma deep learning. Sistem berbasis deep learning tidak hanya mengatasi masalah pengawasan, tetapi juga menghilangkan bias manusia dan mengubah informasi yang sebelumnya hanya ada di benak guru menjadi data terukur yang dapat dianalisis dan dilacak.\n",
-        "\n",
-        "Kami akan mengatasi tantangan ini dengan menerapkan algoritma deep learning pada data video langsung. Solusi yang diusulkan adalah melalui pengenalan emosi wajah.\n",
-        "\n",
-        "## Facial Emotion Recognition (Pengenalan Emosi Wajah)\n",
-        "\n",
-        "Proyek ini bertujuan untuk membangun sistem deteksi emosi wajah langsung dengan pelatihan minimal. Model yang dikembangkan harus mampu mengidentifikasi emosi siswa secara real-time selama sesi kelas langsung."
-      ]
     },
     {
       "cell_type": "markdown",
