--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -145,6 +145,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b48b7893"
+      },
+      "source": [
+        "Bagian ini adalah langkah awal dalam proyek ini. Kita perlu \"mengimpor\" atau memanggil berbagai alat dan fungsi yang sudah dibuat oleh orang lain agar bisa kita gunakan dalam kode kita.\n",
+        "\n",
+        "*   `!pip install mtcnn`: Perintah ini menginstal pustaka (library) bernama `mtcnn`. Pustaka ini sangat berguna untuk mendeteksi wajah dalam gambar menggunakan metode yang canggih.\n",
+        "*   `from matplotlib import pyplot as plt`: Mengimpor alat dari pustaka `matplotlib` untuk membuat grafik dan menampilkan gambar. Kita memberinya nama panggilan `plt` agar lebih mudah.\n",
+        "*   `import numpy as np`: Mengimpor pustaka `numpy` yang sangat baik untuk bekerja dengan angka dan array (kumpulan angka). Kita memberinya nama panggilan `np`.\n",
+        "*   `import pandas as pd`: Mengimpor pustaka `pandas` yang digunakan untuk mengelola dan menganalisis data dalam bentuk tabel. Kita memberinya nama panggilan `pd`.\n",
+        "*   `import cv2`: Mengimpor pustaka `cv2` (OpenCV) yang digunakan untuk berbagai tugas terkait gambar dan video.\n",
+        "*   `from PIL import Image`: Mengimpor alat `Image` dari pustaka `PIL` (Pillow) untuk membuka, memanipulasi, dan menyimpan gambar.\n",
+        "*   `import mtcnn` dan `from mtcnn.mtcnn import MTCNN`: Mengimpor bagian spesifik dari pustaka `mtcnn` yang kita instal tadi. `MTCNN` adalah alat utama untuk mendeteksi wajah.\n",
+        "*   `from matplotlib.patches import Rectangle`: Mengimpor `Rectangle` dari `matplotlib` untuk menggambar bentuk persegi (kotak) pada gambar.\n",
+        "*   `from os import listdir`: Mengimpor `listdir` dari pustaka `os` untuk mendapatkan daftar file di dalam sebuah folder.\n",
+        "*   `from tqdm import tqdm`: Mengimpor `tqdm` untuk menampilkan bilah kemajuan (progress bar) saat melakukan proses yang memakan waktu, agar kita tahu seberapa jauh prosesnya berjalan.\n",
+        "*   `from sklearn.model_selection import train_test_split`: Mengimpor `train_test_split` dari pustaka `sklearn` untuk membagi data kita menjadi dua bagian: satu untuk melatih model (train) dan satu untuk menguji model (test).\n",
+        "*   `import seaborn as sns`: Mengimpor pustaka `seaborn` untuk membuat visualisasi data yang menarik, biasanya digunakan bersama `matplotlib`.\n",
+        "\n",
+        "Dengan mengimpor semua ini, kita punya semua alat yang dibutuhkan untuk memulai proyek pengenalan wajah ini."
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "DIRECTORY = \"/content/drive/MyDrive/Dataset/Yale Face Database\""
@@ -159,7 +183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exploratory Data Analysis\n",
+        "## **2. Exploratory Data Analysis**\n",
         "The Yale Face Database is made from 165 grayscale images of 15 people. There are 11 images per person with different expressions."
       ],
       "metadata": {
