--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -169,6 +169,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **2. Exploratory Data Analysis**\n"
+      ],
+      "metadata": {
+        "id": "27RmaE3RhG5N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7af74896"
+      },
+      "source": [
+        "\n",
+        "Bagian ini bertujuan untuk memahami dataset Yale Face Database yang akan kita gunakan. Dataset ini terdiri dari 165 gambar skala abu-abu dari 15 orang yang berbeda. Setiap orang memiliki 11 gambar dengan ekspresi yang berbeda-beda.\n",
+        "\n",
+        "*   Di sini, kita mendefinisikan variabel `DIRECTORY` yang berisi path atau lokasi folder tempat dataset Yale Face Database disimpan di Google Drive kita. Ini memudahkan kita untuk mengakses gambar-gambar dalam dataset."
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "DIRECTORY = \"/content/drive/MyDrive/Dataset/Yale Face Database\""
@@ -183,11 +204,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **2. Exploratory Data Analysis**\n",
-        "The Yale Face Database is made from 165 grayscale images of 15 people. There are 11 images per person with different expressions."
+        "Kode ini bertujuan untuk menampilkan contoh gambar dari dataset dan menunjukkan bagaimana gambar tersebut direpresentasikan sebagai angka (piksel).\n"
       ],
       "metadata": {
-        "id": "27RmaE3RhG5N"
+        "id": "ok1BZ5derS6z"
       }
     },
     {
@@ -233,11 +253,45 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "333e040d"
+      },
       "source": [
-        "In each of the images, the face is positioned in a different region. The first task is to normalise all of the face positions so that they can reliably be fed into a classifier. There are are few techniques to achieve this. Haar Cascades provide a simple and fast method for detecting faces but they can be unreliable. They are ideally suited to real time detection. Facial identification can afford to spend longer processing the image. Therefore we will use MTCNN which is a face detection algorithm using a CNN, it achieves much higher accuracy than other techniques."
+        "### **2.1. Deteksi Wajah dengan MTCNN**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a299de03"
+      },
+      "source": [
+        "*   `filename = \"/content/drive/MyDrive/Dataset/Yale Face Database/subject01.centerlight\"`: Baris ini menentukan lokasi (path) dari salah satu file gambar di dataset yang akan kita gunakan, yaitu gambar subjek 01 dengan ekspresi \"centerlight\".\n",
+        "*   `pixels = plt.imread(filename)`: Baris ini membaca gambar dari lokasi yang ditentukan dan menyimpannya dalam variabel `pixels`. `pixels` sekarang berisi data angka yang merepresentasikan intensitas warna (karena ini gambar grayscale) dari setiap titik (piksel) pada gambar.\n",
+        "*   `rgb_pixels = np.stack((pixels, pixels, pixels), axis=2)`: Karena MTCNN (algoritma deteksi wajah yang akan digunakan nanti) biasanya bekerja dengan gambar berwarna (RGB), baris ini membuat salinan dari data piksel grayscale sebanyak tiga kali dan menumpuknya menjadi satu array baru. Hasilnya adalah representasi gambar yang seolah-olah berwarna (memiliki 3 channel), meskipun sebenarnya ketiga channel tersebut berisi data yang sama dari gambar grayscale asli.\n",
+        "*   `print(rgb_pixels.shape)`: Baris ini mencetak bentuk (shape) dari array `rgb_pixels`. Bentuk ini menunjukkan dimensi gambar dalam format (tinggi, lebar, channel). Output `(243, 320, 3)` berarti gambar memiliki tinggi 243 piksel, lebar 320 piksel, dan 3 channel warna (RGB).\n",
+        "*   `plt.imshow(pixels)`: Baris ini menyiapkan gambar grayscale (`pixels`) untuk ditampilkan menggunakan `matplotlib`.\n",
+        "*   `plt.show()`: Baris ini menampilkan gambar yang sudah disiapkan.\n",
+        "\n",
+        "Jadi, secara keseluruhan, kode ini memuat gambar grayscale, mengubahnya menjadi format \"seolah-olah\" RGB untuk kompatibilitas dengan alat berikutnya, mencetak dimensinya, dan kemudian menampilkannya."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9d114afb"
+      },
+      "source": [
+        "Pada setiap gambar, wajah ditempatkan di wilayah yang berbeda. Tugas pertama adalah menormalisasi semua posisi wajah sehingga dapat diumpankan dengan andal ke dalam pengklasifikasi. Ada beberapa teknik untuk mencapai ini. Haar Cascades menyediakan metode yang sederhana dan cepat untuk mendeteksi wajah, tetapi mereka bisa tidak dapat diandalkan. Mereka sangat cocok untuk deteksi waktu nyata. Identifikasi wajah dapat menghabiskan waktu lebih lama untuk memproses gambar. Oleh karena itu, kita akan menggunakan MTCNN yang merupakan algoritma pendeteksi wajah menggunakan CNN, algoritma ini mencapai akurasi yang jauh lebih tinggi daripada teknik lainnya."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini menggunakan pustaka MTCNN yang sebelumnya telah diimpor untuk mendeteksi wajah dalam gambar.\n"
       ],
       "metadata": {
-        "id": "fWmqI0ZQhG5Q"
+        "id": "W4DjrBJRsHdb"
       }
     },
     {
@@ -276,6 +330,35 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "644bc0d3"
+      },
+      "source": [
+        "*   `detector = MTCNN()`: Baris ini membuat objek `detector` dari kelas `MTCNN`. Objek ini akan digunakan untuk melakukan deteksi wajah. MTCNN menggunakan *default weights* (pengaturan bawaan) yang sudah dilatih sebelumnya.\n",
+        "*   `results = detector.detect_faces(rgb_pixels)`: Baris ini memanggil metode `detect_faces` pada objek `detector`, dengan memasukkan data gambar `rgb_pixels` sebagai input. Fungsi ini akan memproses gambar dan mencari lokasi wajah di dalamnya. Hasil deteksi disimpan dalam variabel `results`.\n",
+        "*   `results`: Baris ini mencetak isi dari variabel `results`.\n",
+        "\n",
+        "**Penjelasan Output:**\n",
+        "\n",
+        "Output dari sel kode ini adalah daftar (list) kamus (dictionary). Setiap kamus dalam daftar ini mewakili satu wajah yang terdeteksi dan berisi informasi seperti:\n",
+        "\n",
+        "*   `'box'`: Koordinat persegi panjang yang mengelilingi wajah dalam format `[x, y, lebar, tinggi]`. `x` dan `y` adalah koordinat sudut kiri atas kotak pembatas.\n",
+        "*   `'confidence'`: Tingkat keyakinan (probabilitas) bahwa area tersebut memang wajah, dalam skala 0 hingga 1. Nilai yang lebih tinggi menunjukkan keyakinan yang lebih tinggi.\n",
+        "*   `'keypoints'`: Lokasi titik-titik penting pada wajah seperti mata (`left_eye`, `right_eye`), hidung (`nose`), dan mulut (`mouth_left`, `mouth_right`). Koordinat keypoint ini juga dalam format `[x, y]`.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini mendefinisikan sebuah fungsi bernama `draw_image_with_boxes` yang bertujuan untuk menggambar kotak pembatas di sekitar wajah yang terdeteksi pada sebuah gambar. Kemudian, kode ini memanggil fungsi tersebut untuk menampilkan gambar asli dengan kotak-kotak yang menandai lokasi wajah.\n"
+      ],
+      "metadata": {
+        "id": "ozSN9FX3sooQ"
+      }
     },
     {
       "cell_type": "code",
@@ -325,11 +408,43 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8a19b834"
+      },
       "source": [
-        "The next step is to extract and normalise the face pixels so that they can reliably be used for classifying."
+        "Berikut rinciannya:\n",
+        "\n",
+        "*   `def draw_image_with_boxes(data, result_list):`: Baris ini mendefinisikan fungsi `draw_image_with_boxes` yang menerima dua argumen: `data` (data piksel gambar) dan `result_list` (daftar hasil deteksi wajah dari MTCNN).\n",
+        "*   `plt.imshow(data)`: Di dalam fungsi, baris ini menampilkan gambar asli menggunakan `matplotlib`.\n",
+        "*   `ax = plt.gca()`: Baris ini mendapatkan objek \"axes\" (sumbu) dari plot saat ini, yang diperlukan untuk menambahkan elemen grafis seperti persegi panjang.\n",
+        "*   `for result in result_list:`: Baris ini memulai perulangan (loop) untuk memproses setiap hasil deteksi wajah dalam `result_list`.\n",
+        "*   `x, y, width, height = result['box']`: Di setiap perulangan, baris ini mengambil koordinat kotak pembatas (`x`, `y`, `width`, `height`) dari kamus `result`.\n",
+        "*   `rect = Rectangle((x, y), width, height, fill=False, color='red')`: Baris ini membuat objek `Rectangle` (persegi panjang) dengan sudut kiri atas di `(x, y)`, lebar `width`, dan tinggi `height`. `fill=False` berarti persegi panjang hanya berupa garis tepi, dan `color='red'` mengatur warna garis menjadi merah.\n",
+        "*   `ax.add_patch(rect)`: Baris ini menambahkan objek persegi panjang (`rect`) ke plot gambar.\n",
+        "*   `plt.show()`: Setelah perulangan selesai (semua kotak digambar), baris ini menampilkan plot gambar yang sudah dilengkapi dengan kotak pembatas wajah.\n",
+        "*   `draw_image_with_boxes(rgb_pixels, results)`: Baris ini memanggil fungsi `draw_image_with_boxes` dengan menggunakan data gambar `rgb_pixels` dan hasil deteksi wajah `results` yang diperoleh dari sel sebelumnya.\n",
+        "\n",
+        "**Penjelasan Output:**\n",
+        "\n",
+        "Output dari sel kode ini adalah tampilan gambar yang sudah Anda lihat sebelumnya, tetapi sekarang dengan tambahan kotak berwarna merah yang digambar di sekeliling setiap wajah yang berhasil dideteksi oleh algoritma MTCNN. Ini adalah visualisasi dari hasil deteksi wajah."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "702ae82f"
+      },
+      "source": [
+        "### **2.2. Ekstraksi Wajah**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kode ini mendefinisikan dua fungsi: `extract_face_from_file` dan `extract_face`. Tujuan utama dari fungsi-fungsi ini adalah untuk mengekstrak area wajah dari sebuah gambar dan mengubah ukurannya menjadi ukuran yang seragam (160x160 piksel) dalam format grayscale.\n"
       ],
       "metadata": {
-        "id": "a9lCfPaLhG5T"
+        "id": "rW5i31FgtCrB"
       }
     },
     {
@@ -404,6 +519,46 @@
           },
           "metadata": {}
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bab92d74"
+      },
+      "source": [
+        "Berikut rinciannya:\n",
+        "\n",
+        "**Fungsi `extract_face_from_file(filename, required_size=(160, 160))`:**\n",
+        "\n",
+        "*   Fungsi ini mengambil nama file gambar (`filename`) dan ukuran yang diinginkan untuk wajah yang diekstrak (`required_size`) sebagai input.\n",
+        "*   `image = Image.open(filename)`: Baris ini membuka file gambar dari lokasi yang ditentukan menggunakan pustaka PIL (Pillow).\n",
+        "*   `return extract_face(image, required_size)`: Baris ini memanggil fungsi `extract_face` (yang dijelaskan di bawah) dengan gambar yang baru saja dimuat dan ukuran yang diinginkan, lalu mengembalikan hasilnya.\n",
+        "\n",
+        "**Fungsi `extract_face(image, required_size=(160, 160))`:**\n",
+        "\n",
+        "*   Fungsi ini mengambil objek gambar PIL (`image`) dan ukuran yang diinginkan (`required_size`) sebagai input.\n",
+        "*   `image = image.convert('RGB')`: Mengubah gambar menjadi format warna RGB jika belum dalam format tersebut. Ini penting karena MTCNN biasanya bekerja dengan gambar berwarna.\n",
+        "*   `pixels = np.asarray(image)`: Mengubah objek gambar PIL menjadi array NumPy, yang berisi data piksel gambar.\n",
+        "*   `results = detector.detect_faces(pixels)`: Menggunakan objek `detector` MTCNN yang sudah dibuat sebelumnya untuk mendeteksi wajah dalam array piksel.\n",
+        "*   `x1, y1, width, height = results[0]['box']`: Mengambil koordinat kotak pembatas wajah yang pertama kali terdeteksi. `results[0]` mengasumsikan hanya ada satu wajah yang terdeteksi di gambar, yang sesuai dengan dataset Yale Face Database.\n",
+        "*   `x1, y1 = abs(x1), abs(y1)`: Baris ini adalah perbaikan bug untuk memastikan koordinat x1 dan y1 tidak negatif.\n",
+        "*   `x2, y2 = x1 + width, y1 + height`: Menghitung koordinat sudut kanan bawah kotak pembatas.\n",
+        "*   `face = pixels[y1:y2, x1:x2]`: Mengekstrak area wajah dari array piksel berdasarkan koordinat kotak pembatas.\n",
+        "*   `image = Image.fromarray(face)`: Mengubah kembali array piksel wajah yang diekstrak menjadi objek gambar PIL.\n",
+        "*   `image = image.resize(required_size)`: Mengubah ukuran gambar wajah menjadi ukuran yang ditentukan (`required_size`, default 160x160).\n",
+        "*   `face_array = np.asarray(image)`: Mengubah kembali gambar wajah yang sudah diubah ukurannya menjadi array NumPy.\n",
+        "*   `gray_face = cv2.cvtColor(face_array, cv2.COLOR_BGR2GRAY)`: Mengubah gambar wajah (yang mungkin masih dalam format \"seolah-olah\" RGB dari langkah sebelumnya atau asli berwarna) menjadi format grayscale menggunakan OpenCV.\n",
+        "\n",
+        "Setelah definisi fungsi, kode ini melakukan hal berikut:\n",
+        "\n",
+        "*   `detector = MTCNN()`: Membuat objek `detector` MTCNN baru.\n",
+        "*   `face_pixels = extract_face_from_file(\"/content/drive/MyDrive/Dataset/Yale Face Database/subject01.centerlight\")`: Memanggil fungsi `extract_face_from_file` untuk memuat gambar contoh (`subject01.centerlight`), mendeteksi wajah di dalamnya, mengekstrak wajah tersebut, mengubah ukurannya, mengubahnya menjadi grayscale, dan menyimpan hasilnya dalam variabel `face_pixels`.\n",
+        "*   `plt.imshow(face_pixels)`: Menyiapkan gambar wajah yang sudah diekstrak (`face_pixels`) untuk ditampilkan.\n",
+        "\n",
+        "**Penjelasan Output:**\n",
+        "\n",
+        "Output dari sel kode ini adalah tampilan gambar wajah yang sudah diekstrak dan diubah ukurannya menjadi 160x160 piksel dalam format grayscale. Output teks seperti `<matplotlib.image.AxesImage...` adalah representasi internal dari objek plot, bukan data gambar itu sendiri. Gambar visualnya akan muncul di output sel."
       ]
     },
     {
