5. Test Train Split

--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -1118,11 +1118,11 @@
         "id": "4805dc36"
       },
       "source": [
-        "## Test Train Split\n",
+        "## **5. Test Train Split**\n",
         "\n",
         "Ada jumlah sampel yang terbatas per kelas, meskipun kita membutuhkan jumlah kelas yang sesuai untuk mengukur kinerja model dengan tepat. Saya memutuskan pembagian latih uji sekitar ~70/30 (cukup untuk 3 gambar uji).\n",
         "\n",
-        "*   **Sel Kode `5Fx3jNeehG5a`**: Kode ini menghitung ukuran set pengujian berdasarkan jumlah gambar per kelas yang diinginkan dan jumlah kelas total, lalu membagi data menjadi set pelatihan (train) dan pengujian (test) menggunakan `train_test_split` dari scikit-learn. Pembagian dilakukan dengan stratifikasi (`stratify=y`) untuk memastikan setiap kelas terwakili secara proporsional di kedua set."
+        "Kode ini menghitung ukuran set pengujian berdasarkan jumlah gambar per kelas yang diinginkan dan jumlah kelas total, lalu membagi data menjadi set pelatihan (train) dan pengujian (test) menggunakan `train_test_split` dari scikit-learn. Pembagian dilakukan dengan stratifikasi (`stratify=y`) untuk memastikan setiap kelas terwakili secara proporsional di kedua set."
       ]
     },
     {
@@ -1147,7 +1147,7 @@
         "y_train = y_train.tolist()\n",
         "y_test = y_test.tolist()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1206,173 +1206,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Setup the test train data"
-      ],
-      "metadata": {
-        "id": "Mxc4OWTEhG5X"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# list filenames\n",
-        "filenames = pd.DataFrame(list_files(DIRECTORY, \"subject\"))\n",
-        "\n",
-        "# generate split\n",
-        "df = filenames[0].str.split(\".\", expand=True)\n",
-        "df[\"filename\"] = filenames\n",
-        "\n",
-        "# # tidy columns\n",
-        "df = df.rename(columns = {0:\"subject\", 1:\"category\"})\n",
-        "df['subject'] = df.subject.str.replace('subject' , '')\n",
-        "df.apply(pd.to_numeric, errors='coerce').dropna()\n",
-        "df['subject'] = pd.to_numeric(df[\"subject\"])\n",
-        "df"
-      ],
-      "metadata": {
-        "trusted": true,
-        "id": "CMDXy8T3hG5Y",
-        "outputId": "9f3110ed-b4ef-48fc-e80a-2af647a7c133"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "execution_count": 10,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "     subject     category               filename\n0          5    surprised    subject05.surprised\n1          9       normal       subject09.normal\n2          4   rightlight   subject04.rightlight\n3          3    leftlight    subject03.leftlight\n4          7      glasses      subject07.glasses\n..       ...          ...                    ...\n160       10    noglasses    subject10.noglasses\n161        6  centerlight  subject06.centerlight\n162       14  centerlight  subject14.centerlight\n163       12       normal       subject12.normal\n164        8    noglasses    subject08.noglasses\n\n[165 rows x 3 columns]",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>subject</th>\n      <th>category</th>\n      <th>filename</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5</td>\n      <td>surprised</td>\n      <td>subject05.surprised</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>9</td>\n      <td>normal</td>\n      <td>subject09.normal</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4</td>\n      <td>rightlight</td>\n      <td>subject04.rightlight</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>leftlight</td>\n      <td>subject03.leftlight</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7</td>\n      <td>glasses</td>\n      <td>subject07.glasses</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>160</th>\n      <td>10</td>\n      <td>noglasses</td>\n      <td>subject10.noglasses</td>\n    </tr>\n    <tr>\n      <th>161</th>\n      <td>6</td>\n      <td>centerlight</td>\n      <td>subject06.centerlight</td>\n    </tr>\n    <tr>\n      <th>162</th>\n      <td>14</td>\n      <td>centerlight</td>\n      <td>subject14.centerlight</td>\n    </tr>\n    <tr>\n      <th>163</th>\n      <td>12</td>\n      <td>normal</td>\n      <td>subject12.normal</td>\n    </tr>\n    <tr>\n      <th>164</th>\n      <td>8</td>\n      <td>noglasses</td>\n      <td>subject08.noglasses</td>\n    </tr>\n  </tbody>\n</table>\n<p>165 rows × 3 columns</p>\n</div>"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Print classnames\n",
-        "df['subject'].unique()"
-      ],
-      "metadata": {
-        "trusted": true,
-        "id": "XGcv_m8_hG5Z",
-        "outputId": "264915c2-c97f-4468-d5cb-798133230e61"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "execution_count": 11,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "array([ 5,  9,  4,  3,  7, 11,  2, 14, 12,  1,  6, 15, 13,  8, 10])"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Test Train Split\n",
-        "\n",
-        "There are a limited number of samples per class, although we need to a suitable number of classes in order to benchmark the models appropriately. I decided on a test train split of ~ 70/30 (enough for 3 test images)."
-      ],
-      "metadata": {
-        "id": "sJGR6I_PhG5Z"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "PER_CLASS = 8 # 11 images (3 test & 8 train)\n",
-        "NO_CLASSES = 15\n",
-        "DS_SIZE = df[\"subject\"].count()\n",
-        "TEST_SIZE = 1 - (PER_CLASS * NO_CLASSES / DS_SIZE)\n",
-        "\n",
-        "# # list files for each group\n",
-        "# # df.groupby(['subject'])['filename'].apply(list)\n",
-        "y = df['subject']\n",
-        "X = df.drop('subject',axis=1)\n",
-        "\n",
-        "# # subject\n",
-        "X_train_info, X_test_info, y_train, y_test = train_test_split(X, y, test_size=TEST_SIZE, random_state=45, stratify=y)\n",
-        "\n",
-        "y_train = y_train.tolist()\n",
-        "y_test = y_test.tolist()"
-      ],
-      "metadata": {
-        "trusted": true,
-        "id": "5Fx3jNeehG5a"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Extract the faces"
-      ],
-      "metadata": {
-        "id": "vNN8hhQFhG5a"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "detector = MTCNN()\n",
-        "\n",
-        "def load_dataset(dataset):\n",
-        "    faces = list()\n",
-        "    for filename in tqdm(dataset[\"filename\"]):\n",
-        "        path = DIRECTORY + filename\n",
-        "        # get face\n",
-        "        face = extract_face_from_file(path)\n",
-        "        faces.append(face)\n",
-        "    return np.asarray(faces)"
-      ],
-      "metadata": {
-        "trusted": true,
-        "id": "97tmrVNchG5b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_test = load_dataset(X_test_info)\n",
-        "X_train = load_dataset(X_train_info)\n",
-        "\n",
-        "print(X_test.shape)\n",
-        "print(X_train.shape)"
-      ],
-      "metadata": {
-        "trusted": true,
-        "id": "aoNnV_H-hG5b",
-        "outputId": "8306fac7-7e14-438a-c340-afb34f95a98a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stderr",
-          "text": "100%|██████████| 45/45 [00:17<00:00,  2.56it/s]\n100%|██████████| 120/120 [00:46<00:00,  2.59it/s]",
-          "output_type": "stream"
-        },
-        {
-          "name": "stdout",
-          "text": "(45, 160, 160)\n(120, 160, 160)\n",
-          "output_type": "stream"
-        },
-        {
-          "name": "stderr",
-          "text": "\n",
-          "output_type": "stream"
-        }
-      ]
     },
     {
       "cell_type": "markdown",
