10. Training a Convolutional Neural Network

--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -1464,7 +1464,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Testing Random Forrest"
+        "# **9. Testing Random Forrest**"
       ],
       "metadata": {
         "id": "D6xj6VqGhG5h"
@@ -2119,7 +2119,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Training a Convolutional Neural Network"
+        "# **10. Training a Convolutional Neural Network**"
       ],
       "metadata": {
         "id": "uGJQlnMwhG5k"
@@ -2144,7 +2144,7 @@
         "trusted": true,
         "id": "at17HiVvhG5l"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
