--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -211,11 +211,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "020892a5"
+      },
+      "source": [
+        "### **2.1. Tentang Dataset Yale Face Database**\n",
+        "\n",
+        "Dataset ini awalnya berasal dari **Yale Face Database** dan berisi total 165 gambar dalam format GIF dari 15 subjek (orang) yang berbeda, diberi label dari \"subject01\" hingga \"subject15\".\n",
+        "\n",
+        "Untuk setiap subjek, terdapat 11 gambar yang menampilkan berbagai ekspresi wajah atau kondisi, yaitu:\n",
+        "*   Pencahayaan tengah (center-light)\n",
+        "*   Menggunakan kacamata (w/glasses)\n",
+        "*   Senang (happy)\n",
+        "*   Pencahayaan kiri (left-light)\n",
+        "*   Tidak menggunakan kacamata (w/no glasses)\n",
+        "*   Normal\n",
+        "*   Pencahayaan kanan (right-light)\n",
+        "*   Sedih (sad)\n",
+        "*   Mengantuk (sleepy)\n",
+        "*   Terkejut (surprised)\n",
+        "*   Mengedipkan mata (wink)\n",
+        "\n",
+        "Perlu diperhatikan bahwa gambar \"subject04.sad\" mengalami kerusakan dan telah diganti dengan gambar \"subject04.normal\".\n",
+        "\n",
+        "**Inspirasi:**\n",
+        "Dataset ini sangat cocok dan berguna untuk memulai eksperimen dalam bidang pengenalan wajah."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7af74896"
       },
       "source": [
-        "\n",
-        "Bagian ini bertujuan untuk memahami dataset Yale Face Database yang akan kita gunakan. Dataset ini terdiri dari 165 gambar skala abu-abu dari 15 orang yang berbeda. Setiap orang memiliki 11 gambar dengan ekspresi yang berbeda-beda.\n",
         "\n",
         "*   Di sini, kita mendefinisikan variabel `DIRECTORY` yang berisi path atau lokasi folder tempat dataset Yale Face Database disimpan di Google Drive kita. Ini memudahkan kita untuk mengakses gambar-gambar dalam dataset."
       ]
